--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: var(--horizontal_space);
+    padding: var(--horizontal-space);
+    margin-bottom: 15px;
 }
 
 .screen-header__title {
