--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -39,3 +39,15 @@
 .user-component__title--not-bold {
     font-weight: 400;
 }
+
+.user-component__column:last-child {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.user-component__time {
+    display: block;
+    margin-bottom: 10px; 
+    color: rgba(0, 0, 0, 0.3);
+}
