--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -3,7 +3,8 @@
     display: block;
     background-color: #fafafa;
     padding: 15px 0;
-    margin-bottom: 10px;
+    margin-top: -10px;
+    margin-bottom: 20px;
     font-size: 18px;
 }
 
@@ -12,7 +13,7 @@
 }
 
 .friends-screen {
-    padding: 0px var(--horizontal_space);
+    padding: 0px var(--horizontal-space);
 }
 
 .friends-screen__chanel {
