--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 @import url("components/nav-bar.css");
 @import url("components/screen-header.css");
 @import url("components/user-component.css");
+@import url("components/badge.css");
 
 /* Screens */
 @import url("screens/login.css");
@@ -16,4 +17,8 @@
 body {
     font-family: 'Open Sans', sans-serif;
     color: #2e363e;
+}
+
+.main-screen {
+    padding: 0px var(--horizontal-space);
 }
