--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
     background-color: #f9f9fa;
     padding: 20px 50px;
-    border-top: 1px solid rgba(156, 156, 156, 0.3)
+    border-top: var(--main-border);
 }
 
 .nav__ul {
