--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,5 +1,6 @@
 .user-component {
     justify-content: space-between;
+    margin-bottom: 10px;
 }
 
 .user-component, .user-component__column:first-child {
@@ -22,7 +23,7 @@
 .user-component_subtitle {
     margin-top: 8px;
     font-size: 17px;
-    color: rgba(0, 0, 0, 0.5);
+    color: var(--grey);
 }
 
 .user-component__avatar--xl {
