--- a/css/components/badge.css
+++ b/css/components/badge.css
@@ -20,3 +20,13 @@
     width: 5px;
     height: 5px;
 }
+
+.dot-more {
+    position: absolute;
+    left: 145px;
+    bottom: 17px;
+    background-color: tomato;
+    border-radius: 50%;
+    width: 5px;
+    height: 5px;
+}
