--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -18,9 +18,46 @@
     color: #2e363e;
 }
 
+@keyframes notificationAnimation {
+    0%, 100% {
+        transform: rotate(-15deg);
+    }
+    50% {
+        transform: rotate(15deg);
+    }
+    
+}
 .nav__notification {
     position: absolute;
     left: 20px;
     bottom: 15px;
+    animation: notificationAnimation 1.5s ease-in-out infinite;
 }
 
+@keyframes appearBtnAnimation {
+    from {
+        opacity: 0;
+    }
+    to {
+        transform: none;
+        opacity: 1;
+    }
+}
+
+.nav__btn {
+    transform: translateY(50px);
+    opacity: 0;
+    animation: appearBtnAnimation 1s ease-in-out forwards;
+}
+
+.nav__btn:nth-child(2) {
+    animation-delay: 0.5s;
+}
+
+.nav__btn:nth-child(3) {
+    animation-delay: 1s;
+}
+
+.nav__btn:last-child {
+    animation-delay: 1.5s;
+}
