--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -31,7 +31,7 @@
 .more-suggestion__icons i {
     width: 60px;
     height: 60px;
-    background-color: var(--yellow);
+    background-color: var(--skyblue);
     border-radius: 10px;
     display: flex;
     justify-content: center;
