--- a/css/variables.css
+++ b/css/variables.css
@@ -1,7 +1,8 @@
 :root {
-    --yellow: #fae100;
+    --yellow: #fffab8;
     --grey: rgba(0, 0, 0, 0.5);
     --horizontal-space: 25px;
     --main-border: 1px solid rgba(0, 0, 0, 0.1);
-
+    --chat-background: #E6F1FF;
+    --skyblue: #b0d2ff;
 }
